Criando um Formulario

--- a/web-base/index.html
+++ b/web-base/index.html
@@ -6,6 +6,18 @@
 </head>
 <body>
     <h1>Aqui vai um vai um título</h1>
-    <p>Aqui temos um paragráfo</p>
+    <form>
+        <label for="nomeCompleto">Nome Completo</label>
+        <input name="nomeCompleto" type="text">
+
+        <label for="email">Email</label>
+        <input name="email" type="text">
+
+        <label for="nota">Nota</label>
+        <input name="nota" type="text">
+
+        <input type="button" value="Cadastrar">
+
+    </form>
 </body>
 </html>
