Tabelas no HTML

--- a/web-base/index.html
+++ b/web-base/index.html
@@ -19,5 +19,26 @@
         <input type="button" value="Cadastrar">
 
     </form>
+    <div>
+        <table>
+            <thead>
+                <th>Nome</th>
+                <th>Email</th>
+                <th>Nota</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Anderson Silva</td>
+                    <td>asilva@gmail.com</td>
+                    <td>10.0</td>
+                </tr>
+                <tr>
+                    <td>Maria Silva</td>
+                    <td>maria@gmail.com</td>
+                    <td>10.0</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
