Add estilo para o botao cadastrar

--- a/web-base/index.html
+++ b/web-base/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="app">
-        <h1>Aqui vai um vai um título</h1>
+        <h1>Cadastro de Alunos</h1>
         <form>
             <label for="nomeCompleto">Nome Completo</label>
             <input name="nomeCompleto" type="text">
@@ -58,6 +58,15 @@
         }
         .table th, .table td{
             border-top: 1px solid #bbb;
+        }
+        input{
+            display: block;
+        }
+        input[type=button]{
+            background-color: #3F51b5;
+            margin-top: 10px;
+            border-color: #3F51b5;
+            color: #eee;
         }
     </style>
 </body>
