--- a/web-base/index.html
+++ b/web-base/index.html
@@ -10,17 +10,19 @@
         <h1>Cadastro de Alunos</h1>
         <form>
             <label for="nomeCompleto">Nome Completo</label>
-            <input name="nomeCompleto" type="text">
+            <input name="nomeCompleto" type="text" v-model="form.nome">
 
             <label for="email">Email</label>
-            <input name="email" type="text">
+            <input name="email" type="text" v-model="form.email">
 
             <label for="nota">Nota</label>
-            <input name="nota" type="text">
+            <input name="nota" type="text" v-model="form.nota">
 
             <input type="button" value="Cadastrar">
-
         </form>
+        <span>
+            {{form.nome}} - {{form.email}} - {{form.nota}}
+        </span>
         <div>
             <table class="table">
                 <thead>
@@ -42,6 +44,12 @@
         var app =  new Vue({
             el: "#app",
             data: {
+                form: {
+                    nome: '',
+                    email: '',
+                    nota: ''
+
+                },
                 alunos: [
                     {nome: 'Anderson Silva', email: 'asilva@gmail.com', nota: 10 },
                     {nome: 'Maria Luiza', email: 'maria@gmail.com', nota: 9 },
